# africastalking-rs

./: .env.sample  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  REFRENCE.md
.github/workflows/: ci.yaml
docs/: Dockerfile  book.toml
examples/: locci_realtors_ussd.rs  mordern_bulk_sms.rs  send_data.rs  send_sms.rs  ussd_with_axum.rs  voice_with_callback.rs
references/ussd/: README.md  USSD_DOCUMENTATION.md  framework_examples.rs  stateful_example.rs  ussd_tests.rs
references/voice/: VOICE_DOCUMENTATION.md  voice_examples.rs
src/: client.rs  config.rs  error.rs  lib.rs  types.rs
src/modules/: airtime.rs  application.rs  data.rs  mod.rs  payments.rs  sms.rs  ussd.rs  voice.rs
