[package]
name = "africastalking"
version = "0.1.0"
authors = ["Mike Teddy Omondi <mike_omondi@outlook.com>"]
edition = "2024"
license = "MIT"
description = "Unofficial Rust SDK for Africa's Talking API"
repository = "https://github.com/MikeTeddyOmondi/africastalking-rs"
documentation = "https://docs.rs/africastalking"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
serde_urlencoded = "0.7"
dotenvy = "0.15"

[dev-dependencies]
dotenvy = "0.15"
